--- a/src/app/admin/creertache/creertache.component.html
+++ b/src/app/admin/creertache/creertache.component.html
@@ -12,9 +12,9 @@
             <div class="form-group">
                 <label for="">Priority:</label>
                 <select name="" id="" class="form-select" formControlName="priority">
-                    <option value="Tres urgent">Tres urgent</option>
-                    <option value="Urgent">Urgent</option>
-                    <option value="Moyenne">Moyenne</option>
+                    <option value="1">Tres urgent</option>
+                    <option value="2">Urgent</option>
+                    <option value="3">Moyenne</option>
                 </select>
             </div>
             <div class="form-group">
