--- a/src/app/admin/dasboard/client-dasboard/client-dasboard.component.html
+++ b/src/app/admin/dasboard/client-dasboard/client-dasboard.component.html
@@ -1,1 +1,12 @@
-<p>client-dasboard works!</p>
+<table style="width:100%" class="table table-bordered">
+    <tr>
+      <th>Name</th>
+      <th >Telephone</th>
+      <th >Telephone</th>
+    </tr>
+    <tr>
+        <td style="border: none;"></td>
+        <td style="border: none;"></td>
+        <td style="border: soli 1px black;">55577855</td>     
+    </tr>
+  </table>
