--- a/src/app/admin/dasboard/dasboard.component.html
+++ b/src/app/admin/dasboard/dasboard.component.html
@@ -2,27 +2,60 @@
     <div class="header">
         <div class="sous-menu">
             <div class="stat-menu">
-                <span>Tache traité :</span>
-                <span> 50</span>
+                <span>Tache traité aujourd'hui:</span>
+                <span> {{total}}</span>
             </div>
-            <a routerLink="/my/list_tache">Liste</a>
+            <a routerLink="/my/admin/list_taches_jour">Liste</a>
         </div>
         <div class="sous-menu">
             <div class="stat-menu">
-                <span>Tache traité</span>
-                <span>50</span>
+                <span>Total Mots</span>
+                <span>{{totalMotsJour}}</span>
             </div>
-            <a routerLink="/my/list_tache"></a>
+            <a routerLink="/my/admin/list_taches_jour">Liste</a>
         </div>
         <div class="sous-menu">
             <div class="stat-menu">
-                <span>Tache traité</span>
-                <span>50</span>
+                <span>Total page</span>
+                <span>{{totalPageJour}}</span>
             </div>
-            <a routerLink="/my/list_tache"></a>
+            <a routerLink="/my/admin/list_taches_jour">Liste</a>
         </div>
     </div>
     <div class="table-liste">
-        <button class="btn btn-danger" (click)="tst()">test</button>
+        <div class="header-liste">
+            <div class="select">
+                <select  class="form-select inputMois" (change)="selectByMois($event)">
+                    <option *ngFor="let item of mois" value="{{item.id}}" >{{item.mois}}</option>
+                </select>
+                <input type="text" name="" id="" placeholder="Recherce par client" class="form-control inputCode" (keyup)="getKey($event)">          
+            </div>
+            <div class="stat">
+                <span>Total mots: <span class="mots">{{totalByClient}}</span></span> 
+                <span>Total pages: <span class="page">{{totalPageByClient}}</span></span>                
+            </div>
+        </div>       
+        <table class="table table-group-divider tableStat">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Client</th>
+                    <th>Mots</th>
+                    <th>Pages</th>
+                    <th>Ation</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of listeTache ; let i=index">
+                    <td>{{i+1}}</td>
+                    <td>{{item.user.nom}}</td>
+                    <td>{{item.mots}}</td>
+                    <td>{{item.pages}}</td>
+                    <td>
+                        <button class="btn btn-primary"(click)="redirectfacture(item.user.id)">Facturer</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>               
     </div>
 </div>
