--- a/src/app/admin/liste-of-offiche/liste-of-offiche.component.html
+++ b/src/app/admin/liste-of-offiche/liste-of-offiche.component.html
@@ -15,11 +15,13 @@
                 
             </thead>
             <tbody>
-                <tr *ngFor="let item of listeOperation!">
-                    <td>{{item.id}}</td>
+                <tr *ngFor="let item of listeOperation ; let i=index">
+                    <td>{{i + 1}}</td>
                     <td>{{item.codeTache}}</td>
                     <td>{{item.description}}</td>
-                    <td>{{item.priority}}</td>
+                    <td *ngIf="item.priority =='1'" style="color: red;">Trés urgent</td>
+                    <td *ngIf="item.priority =='2'" style="color: rgb(233, 236, 20);">Urgent</td>
+                    <td *ngIf="item.priority =='3'" style="color: rgb(44, 62, 219);">Moyenne</td>
                     <td>
                         <button (click)="prendreTaches(item.id)">Prendre</button>
                     </td>
