--- a/src/app/admin/reception-of-offiche/reception-of-offiche.component.html
+++ b/src/app/admin/reception-of-offiche/reception-of-offiche.component.html
@@ -19,14 +19,15 @@
                 <tr *ngFor="let item of listereception">
                     <td>{{item.id}}</td>
                     <td>{{item.operationEntree.codeTache}}</td>
-                    <td>{{item.operationEntree.appUser.nom}}</td>
-                    <td>{{item.operationEntree.appUser.email}}</td>
+                    <td>{{item.operationEntree.user.nom}}</td>
+                    <td>{{item.operationEntree.user.email}}</td>
                     <td>{{item.operationEntree.priority}}</td>
                     <td>{{item.operationEntree.status}}</td>
                     <td>
-                        <button class="btn btn-sm btn-secondary" (click)="telecharger(item.operationEntree.id)">Telecharger</button>
+                        <button *ngIf="item.operationEntree.status=='En cours'" class="btn btn-sm btn-secondary" (click)="telecharger(item.operationEntree.id)">Telecharger</button>
                         <button *ngIf="item.operationEntree.status=='En cours'" class="btn btn-sm btn-primary" (click)="traitemment(item.id)">Rendre</button>
-                        <button *ngIf="item.operationEntree.status=='Traitée'" class="btn btn-sm btn-success" (click)="traitemment(item.id)">Modifier</button>
+                        <!--<button *ngIf="item.operationEntree.status=='Traitée'" class="btn btn-sm btn-success" (click)="traitemment(item.id)">Modifier</button> --n 
+                        -->
                     </td>
                 </tr>
             </tbody>
