--- a/src/app/admin/statistique/statistique.component.html
+++ b/src/app/admin/statistique/statistique.component.html
@@ -1,8 +1,41 @@
-<div>
-    <div class=""></div>
-    <div>
-        <table>
-            <thead></thead>
+<div class="statistique">
+    <div class="header">        
+        <div class="select">
+            <select  class="form-select selectMois" (change)="selectByMois($event)">
+                <option *ngFor="let item of mois" value="{{item.id}}" >{{item.mois}}</option>
+            </select>
+            <select  class="form-select selectClient" (change)="selectByClient($event)">
+                <option value="0">------Client------</option>
+                <option *ngFor="let item of listClient" value="{{item.user.id}}" >{{item.user.nom}}</option>
+            </select>
+            <input type="date" class="form-control selectDate" (change)="selectDate($event)">
+        </div>
+        <div class="cout">
+            <Span>Total mots: {{totalByClient}}</Span>
+            <Span>Total page: {{totalPageByClient}}</Span>
+        </div>
+    </div>
+    <div class="table">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Code</th>
+                    <th>Mots</th>
+                    <th>Page</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of listeTache | paginate:{itemsPerPage:10,currentPage:page,totalItems:totalPageItems}">
+                    <td>{{item.id}}</td>
+                    <td>{{item.reception!.operationEntree.codeTache}}</td>
+                    <td>{{item.mots}}</td>
+                    <td>{{item.page}}</td>
+                </tr>
+            </tbody>
         </table>
+        <div class="pagination">
+            <pagination-controls (pageChange)="page=$event"></pagination-controls>
+        </div>
     </div>
 </div>
