--- a/src/app/admin/utilisateur/utilisateur.component.html
+++ b/src/app/admin/utilisateur/utilisateur.component.html
@@ -4,7 +4,7 @@
             <span>Liste de tous utilisateur</span>
             <button type="button" (click)="openModal()">Nouveau</button>
         </div>
-        <table class="table table-bordered">
+        <table class="tablee">
             <thead>
                 <tr>
                     <th>#</th>
@@ -14,25 +14,28 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of user | async">
+                <tr *ngFor="let item of user | async paginate:{itemsPerPage:3,currentPage:page,totalItems:totalPageItems}">
                     <td>{{item.id}}</td>
                     <td>{{item.nom}}</td>
                     <td>{{item.email}}</td>
-                    <td>
-                        <button class="btn" *ngIf="item.status==0" title="Desactiver"
-                            (click)="desactiverCompter(item.id)" style="color:rgb(20, 20, 20);"><i
+                    <td class="button">
+                        <button class="btn btn-sm" *ngIf="item.status==0" style="color: aquamarine;" title="Desactiver"
+                            (click)="desactiverCompter(item.id)" ><i
                                 class="bi bi-toggle-off"></i></button>
-                        <button class="btn" *ngIf="item.status==1" (click)="desactiverCompter(item.id)" title="Activer"
-                            style="color: aqua; "><i class="bi bi-toggle-on"></i></button>
+                        <button class="btn btn-sm" style="color: aquamarine;" *ngIf="item.status==1" (click)="desactiverCompter(item.id)" title="Activer"
+                            ><i class="bi bi-toggle-on"></i></button>
                     </td>
                 </tr>
             </tbody>
-        </table>        
+        </table>  
+        <div class="pagination">
+            <pagination-controls (pageChange)="page=$event"></pagination-controls>
+        </div>      
     </div>
     <div class="test" [hidden]="modal">
         <form [formGroup]="formUtilisateur" (ngSubmit)="enregitrerUtilisateur()">
             <div class="form-header">
-                <span>Ajou nouveau utilisateur</span>
+                <span>Ajout nouveau utilisateur</span>
             </div>
             <div class="form-group">
                 <label for="">Nom :</label>
@@ -55,8 +58,9 @@
                     <option value="CLIENT">CLIENT</option>
                 </select>
             </div>
-            <div class="form-group">
-               <button class="btn btn-primary form-control">Enregistrer</button>
+            <div class="form-group button">
+               <button type="submit" class="btn btn-primary form-control">Enregistrer</button>
+               <a class="btn btn-danger form-control" (click)="annuller()">Annuller</a>
             </div>
         </form>
     </div>
