--- a/src/app/admin/dasboard/dasboard.component.html
+++ b/src/app/admin/dasboard/dasboard.component.html
@@ -52,7 +52,7 @@
                     <td>{{item.mots}}</td>
                     <td>{{item.pages}}</td>
                     <td>
-                        <button class="btn btn-primary"(click)="redirectfacture(item.user.id)">Facturer</button>
+                        <button class="btn btn-primary"(click)="redirectfacture(item.user.id,item.annee)">Facturer</button>
                     </td>
                 </tr>
             </tbody>
