--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
 <div class="sidebar-container">
     <div class=""></div>
     <div class="recherche">
-        <span>Bon courage a votre travail <span class="nomUser">{{nom}}</span></span>
+        <span>Bienvenue <span class="nomUser">{{nom}}</span></span>
     </div>
     <div class="deconnection">
         <a *ngIf="role=='CLIENT'" class="deconnexion-btn" (click)="deconnexionClient()" title="Deconnecter"><i
             class="bi bi-box-arrow-right"></i>
     </a>
-        <a *ngIf="role=='ADMIN' || 'BACKOFFICHE'" class="deconnexion-btn" (click)="deconnexion()" title="Deconnecter"><i
+        <a *ngIf="role=='ADMIN'" class="deconnexion-btn" (click)="deconnexion()" title="Deconnecter"><i
                 class="bi bi-box-arrow-right"></i>
         </a>
-        <div [hidden]="!openModal" class="modalProfil">
-            <div>saluuuuuuuu</div>
-        </div>
+        <a *ngIf="role=='BACKOFFICE'" class="deconnexion-btn" (click)="deconnexion()" title="DeconnecterAdmin"><i
+            class="bi bi-box-arrow-right"></i>
+    </a>     
     </div>
 </div>
