--- a/src/app/admin/sidebar/sidebar.component.scss
+++ b/src/app/admin/sidebar/sidebar.component.scss
@@ -25,5 +25,10 @@
 .nomUser {
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    color: burlywood;
+}
+
+.recherche span {
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
 }
