--- a/src/app/admin/utilisateur/utilisateur.component.html
+++ b/src/app/admin/utilisateur/utilisateur.component.html
@@ -2,7 +2,7 @@
     <div class="table-utilisateur">
         <div class="header">
             <span>Liste de tous utilisateur</span>
-            <button type="button" (click)="openModal()">Nouveau</button>
+            <button class="btn btn-success" type="button" (click)="openModal()"><i class="bi bi-person-fill-add"></i> Nouveau</button>
         </div>
         <table class="tablee">
             <thead>
