--- a/src/app/admin/facture/facture.component.html
+++ b/src/app/admin/facture/facture.component.html
@@ -1,1 +1,49 @@
-<p>facture works!</p>
+<div class="facture">
+    <div class="header">
+        <div class="select">
+            <div class="form-group2">
+                <label for="">Annee:</label>
+                <input type="text" placeholder="Prix unitaire" readonly value="{{annee}}" class="form-control">
+            </div>
+            <div class="form-group1">
+                <label for="">Facturer par:</label>
+                <select name="" id="" class="form-select">
+                    <option value="">------Choisir-------</option>
+                    <option value="">Mot     </option>
+                    <option value="">      Page    </option>
+                </select>
+            </div>
+            <div class="form-group2">
+                <label for="">Prix unitaire:</label>
+                <input type="text" placeholder="Prix unitaire" class="form-control">
+            </div>
+        </div>
+        <div class="button-excel">
+            <label for="">Facturer :</label>
+            <button class="btn btn-primary" (click)="exportExcel()">Exporter</button>
+        </div>
+    </div>
+    <div class="liste">
+        <table class="table table-group-divider" id="table-listeR">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Code Taches</th>
+                    <th>Mots</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of listeTache , let i=index">
+                    <td>{{i + 1}}</td>
+                    <td>{{item.reception.operationEntree.codeTache}}</td>
+                    <td>{{item.mots}}</td>
+                </tr>
+                <tr class="total-row">
+                    <td colspan="1"></td>
+                    <td>Total</td>
+                    <td>250.00</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
