--- a/src/app/admin/tache/tache.component.scss
+++ b/src/app/admin/tache/tache.component.scss
@@ -4,12 +4,29 @@
     .header {
         display: flex;
         width: 350px;
+        align-items: center;
         margin-bottom: 1rem;
+        border: solid 1.5px gray;
+        border-radius: 25px;
 
-        input {}
+        input {
+            border-radius: 25px;
+            height: 100%;
+            border: none;
+            outline: none;
+            width: 100%;
+            padding-left: 1rem;
+            align-items: center;
+        }
 
         i {
             font-size: 27px;
+            width: 50px;
+            padding-left: .5rem;
+            justify-content: center;
+            align-items: center;
+            background-color: gray;
+            border-radius: 0px 23px 23px 0px;
         }
     }
 
@@ -19,7 +36,6 @@
         span {
             font-weight: bold;
             font-size: 20px;
-            background: rebeccapurple;
             width: 100%;
         }
 
