--- a/src/app/login-for-admin/login-for-admin.component.scss
+++ b/src/app/login-for-admin/login-for-admin.component.scss
@@ -1,30 +1,77 @@
-.loginAdmin {
-    height: 100vh;
-    width: 100%;
+.login_container {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
     background: url("../../assets/images/photo.jpg") no-repeat;
     background-size: cover;
+    width: 100%;
 
-    form {
-        height: 300px;
-        width: 400px;
-        border-radius: 8px;
-        box-shadow: 3px 3px 3px 3px aliceblue;
+    .main {
+        width: 500px;
+        height: 340px;
+        display: flex;
+        justify-content: center;
+        box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+        background-color: white;
+        padding: 1rem;
+        border-radius: 9px;
 
-        .form-group {
-            margin: 1.5rem;
-            display: flex;
-            flex-direction: column;
+        height: 70vh;
 
-            label {
-                font-size: 17px;
+        form {
+            background: transparent;
+            border: 2px solid rgba(255, 255, 255, 0.5);
+            border-radius: 0px 9px 9px 0px;
+            width: 100%;
+
+            .header_form {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                span {
+                    font-size: 30px;
+                    border-bottom: solid 2px blue;
+                    color: blue;
+                }
             }
 
-            input {}
+            .input_form {
+                margin: 1rem;
+
+                input {
+                    margin-top: .5rem;
+                    height: 50px;
+                }
+
+                .button {
+                    width: 100%;
+                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    font-weight: bold;
+                    font-size: 20px;
+                    height: 50px;
+                }
+            }
+
+            .footer {
+                margin-top: 2rem;
+                margin-left: 1rem;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+                a {
+                    i {
+                        font-size: 20px;
+                    }
+                }
+            }
         }
+
     }
+
+
 
 
 }
