--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,41 +8,49 @@
     width: 100%;
 
     .main {
-        width: 800px;
+        width: 500px;
         height: 340px;
         display: flex;
+        justify-content: center;
         box-shadow: 0 0 30px rgba(0, 0, 0, .5);
-        background-color: transparent rgb(227, 235, 232);
+        background-color: white;
         padding: 1rem;
         border-radius: 9px;
 
-        .logo {
-            background: url("../../assets/images/Asosaina.jpg") no-repeat;
-            background-size: cover;
-            width: 380px;
-            height: 300px;
-            border-radius: 9px;
-
-        }
+        height: 70vh;
 
         form {
             background: transparent;
             border: 2px solid rgba(255, 255, 255, 0.5);
             border-radius: 0px 9px 9px 0px;
-            width: 380px;
-            height: 300px;
+            width: 100%;
+
+            .header_form {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                span {
+                    font-size: 30px;
+                    border-bottom: solid 2px blue;
+                    color: blue;
+                }
+            }
 
             .input_form {
                 margin: 1rem;
 
                 input {
                     margin-top: .5rem;
+                    height: 50px;
                 }
 
                 .button {
                     width: 100%;
                     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                     font-weight: bold;
+                    font-size: 20px;
+                    height: 50px;
                 }
             }
 
@@ -54,13 +62,9 @@
                 align-items: center;
 
                 a {
-                    background-color: rgb(145, 163, 179);
-                    width: 40px;
-                    height: 40px;
-                    font-weight: bold;
-                    text-decoration: none;
-                    text-align: center;
-                    border-radius: 50%;
+                    i {
+                        font-size: 20px;
+                    }
                 }
             }
         }
