--- a/src/app/admin/creertache/creertache.component.scss
+++ b/src/app/admin/creertache/creertache.component.scss
@@ -10,7 +10,7 @@
 
     form {
         width: 400px;
-        height: 400px;
+        height: auto;
         border-radius: 15px 15px 15px 15px;
         background-color: white;
         box-shadow: 3px 3px 3px 3px rgb(219, 221, 223);
