--- a/src/app/admin/dasboard/client-dasboard/client-dasboard.component.scss
+++ b/src/app/admin/dasboard/client-dasboard/client-dasboard.component.scss
@@ -7,6 +7,10 @@
 
         .form-group {
             display: flex;
+
+            .select-mois {
+                margin-right: 1rem;
+            }
         }
     }
 }
