--- a/src/app/admin/liste-of-offiche/liste-of-offiche.component.html
+++ b/src/app/admin/liste-of-offiche/liste-of-offiche.component.html
@@ -23,7 +23,7 @@
                     <td *ngIf="item.priority =='2'" style="color: rgb(233, 236, 20);">Urgent</td>
                     <td *ngIf="item.priority =='3'" style="color: rgb(44, 62, 219);">Moyenne</td>
                     <td>
-                        <button (click)="prendreTaches(item.id)">Prendre</button>
+                        <button (click)="prendreTaches(item.id)" class="btn btn-success btn-sm">Prendre</button>
                     </td>
                 </tr>
             </tbody>
