--- a/src/app/admin/creertache/creertache.component.html
+++ b/src/app/admin/creertache/creertache.component.html
@@ -6,8 +6,7 @@
             </div>
             <div class="form-group">
                 <label for="">Description:</label>
-                <input type="text" class="form-control" placeholder="Description de tache"
-                    formControlName="description">
+                <textarea name="" id="" cols="30" rows="3" class="form-control" formControlName="description"></textarea>                
             </div>
             <div class="form-group">
                 <label for="">Priority:</label>
