--- a/src/app/admin/dasboard/backoofiche-dasboard/backoofiche-dasboard.component.html
+++ b/src/app/admin/dasboard/backoofiche-dasboard/backoofiche-dasboard.component.html
@@ -1,11 +1,16 @@
 <div class="offiche">
     <div class="header">
-        <select  class="form-select" (change)="selectByMois($event)">
-            <option *ngFor="let item of mois" value="{{item.id}}" >{{item.mois}}</option>
-          </select>
-          <select name="" id="" class="form-select">
-            <option value="item" *ngFor="let item of annee">{{item}}</option>
-          </select>       
+        <div class="header-left">
+            <select  class="form-select form-moi" (change)="selectByMois($event)">
+                <option *ngFor="let item of mois" value="{{item.id}}" >{{item.mois}}</option>
+            </select>
+            <select class="form-select" (change)="selectByAnnee($event)">
+                <option value="{{item}}" *ngFor="let item of annees">{{item}}</option>
+            </select>
+        </div>
+        <div class="header-right">
+            <span>Tache traitée: <span>{{lengthByMois}}</span></span>
+        </div>   
     </div>
     <div class="liste-table">
         <table class="table table-bordered">
@@ -20,8 +25,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of listereception">
-                    <td>{{item.id}}</td>
+                <tr *ngFor="let item of listereception | paginate:{itemsPerPage:10,currentPage:page,totalItems:totalPageItems} ; let i=index">
+                    <td>{{i + 1}}</td>
                     <td>{{item.operationEntree.codeTache}}</td>
                     <td>{{item.operationEntree.user.nom}}</td>
                     <td>{{item.operationEntree.user.email}}</td>
@@ -32,5 +37,8 @@
                 </tr>
             </tbody>
         </table>
+        <div class="pagination">
+            <pagination-controls (pageChange)="page=$event"></pagination-controls>
+        </div> 
     </div>
 </div>
