--- a/src/app/admin/dasboard/dasboard.component.html
+++ b/src/app/admin/dasboard/dasboard.component.html
@@ -9,25 +9,37 @@
         </div>
         <div class="sous-menu">
             <div class="stat-menu">
-                <span>Total Mots</span>
+                <span>Total Mots: </span>
                 <span>{{totalMotsJour}}</span>
             </div>
             <a routerLink="/my/admin/list_taches_jour">Liste</a>
         </div>
         <div class="sous-menu">
             <div class="stat-menu">
-                <span>Total page</span>
+                <span>Total page: </span>
                 <span>{{totalPageJour}}</span>
             </div>
             <a routerLink="/my/admin/list_taches_jour">Liste</a>
+        </div>
+        <div class="sous-menu">
+            <div class="stat-menu">
+                <span>Validation: </span>
+                <span>{{tacheNoValider}}</span>
+            </div>
+            <a routerLink="/my/admin/list_validation">Liste</a>
         </div>
     </div>
     <div class="table-liste">
         <div class="header-liste">
             <div class="select">
-                <select  class="form-select inputMois" (change)="selectByMois($event)">
-                    <option *ngFor="let item of mois" value="{{item.id}}" >{{item.mois}}</option>
-                </select>
+                <div class="select-header">
+                    <select  class="form-select inputMois" (change)="selectByAnnee($event)">
+                        <option *ngFor="let item of annees" value="{{item}}" >{{item}}</option>
+                    </select>
+                    <select  class="form-select inputMois" (change)="selectByMois($event)">
+                        <option *ngFor="let item of mois" value="{{item.id}}" >{{item.mois}}</option>
+                    </select>
+                </div>
                 <input type="text" name="" id="" placeholder="Recherce par client" class="form-control inputCode" (keyup)="getKey($event)">          
             </div>
             <div class="stat">
@@ -46,7 +58,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of listeTache ; let i=index">
+                <tr *ngFor="let item of listeTache | paginate:{itemsPerPage:10,currentPage:page,totalItems:totalPageItems} ; let i=index">
                     <td>{{i+1}}</td>
                     <td>{{item.user.nom}}</td>
                     <td>{{item.mots}}</td>
@@ -56,6 +68,9 @@
                     </td>
                 </tr>
             </tbody>
-        </table>               
+        </table>
+        <div class="pagination">
+            <pagination-controls (pageChange)="page=$event"></pagination-controls>
+        </div>              
     </div>
 </div>
