--- a/src/app/admin/facture/facture.component.html
+++ b/src/app/admin/facture/facture.component.html
@@ -33,7 +33,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of listeTache , let i=index">
+                <tr *ngFor="let item of listeTache; let i=index">
                     <td>{{i + 1}}</td>
                     <td>{{item.reception.operationEntree.codeTache}}</td>
                     <td>{{item.mots}}</td>
@@ -44,6 +44,6 @@
                     <td>250.00</td>
                 </tr>
             </tbody>
-        </table>
+        </table>        
     </div>
 </div>
