--- a/src/app/admin/statistique/statistique.component.scss
+++ b/src/app/admin/statistique/statistique.component.scss
@@ -20,15 +20,20 @@
                 margin-right: 1rem;
             }
         }
+
+        .cout {
+
+            .page {
+                margin-left: .7rem;
+            }
+        }
     }
 
     .table {}
 }
 
 @media screen and(max-width:1000px) {
-    .statistique {
-        background-color: aqua;
-    }
+    .statistique {}
 }
 
 @media screen and(max-width:800px) {
