--- a/src/app/admin/tache/tache.component.html
+++ b/src/app/admin/tache/tache.component.html
@@ -9,7 +9,6 @@
             <thead>
                 <tr>
                     <th>#</th>
-                    <th>Description</th>
                     <th>Code tache</th>
                     <th>Status</th>
                     <th>Priority</th>
@@ -19,14 +18,14 @@
             <tbody>
                 <tr *ngFor="let item of listeOperation ; let i=index">
                     <td>{{i + 1}}</td>
-                    <td>{{item.description}}</td>
                     <td>{{item.codeTache}}</td>
                     <td >{{item.status  }}</td>
                     <td *ngIf="item.priority =='1'" style="color: red;">Trés urgent</td>
                     <td *ngIf="item.priority =='2'" style="color: rgb(233, 236, 20);">Urgent</td>
                     <td *ngIf="item.priority =='3'" style="color: rgb(44, 62, 219);">Moyenne</td>
                     <td>
-                        <button>Suppimer</button>
+                        <button *ngIf="item.status=='En instance'" class="btn btn-danger btn-sm">Suppimer</button>
+                        <button *ngIf="item.status!='En instance'">_</button>
                     </td>
                 </tr>
             </tbody>
