--- a/src/app/admin/telecharger-of-offiche/telecharger-of-offiche.component.html
+++ b/src/app/admin/telecharger-of-offiche/telecharger-of-offiche.component.html
@@ -1,12 +1,18 @@
 <div class="container-telecharger">
     <div class="main">
+        <div class="main-description-taches">
+            <div class="consingation-title">
+                <span>Consingation de tache</span> 
+            </div>           
+            <span class="body-consingation">{{description}}</span>
+        </div>
         <div class="form">
             <label for="">Fichier documment:</label>
-            <button (click)="teleChargerDoc()">Telecharger</button>
+            <button (click)="teleChargerDoc()"> <i class="bi bi-upload"></i> Telecharger <i class="bi bi-filetype-docx"></i></button>
         </div>
         <div class="form">
             <label for="">Fichier audio:</label>
-            <button (click)="teleChargerAudio()">Telecharger</button>   
+            <button (click)="teleChargerAudio()"><i class="bi bi-upload"></i> Telecharger <i class="bi bi-filetype-mp3"></i></button>   
         </div>
         
     </div>
