--- a/src/app/login-for-admin/login-for-admin.component.scss
+++ b/src/app/login-for-admin/login-for-admin.component.scss
@@ -17,7 +17,7 @@
         padding: 1rem;
         border-radius: 9px;
 
-        height: 70vh;
+        height: auto;
 
         form {
             background: transparent;
