--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,8 +18,8 @@
 			</div>
 			<div class="footer">
 				<a href="" title="facebook"><i class=" bi bi-facebook"></i></a>
+				<a href="" title="twitter"><i class=" bi bi-twitter"></i></a>
 				<a href="" title="whatsapp"><i class=" bi bi-whatsapp"></i></a>
-				<a href="" title="facebook"><i class=" bi bi-facebook"></i></a>
 			</div>
 		</form>
 	</div>
