--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -17,7 +17,7 @@
         padding: 1rem;
         border-radius: 9px;
 
-        height: 70vh;
+        height: auto;
 
         form {
             background: transparent;
@@ -30,7 +30,14 @@
                 justify-content: center;
                 align-items: center;
 
+                img {
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50% 50% 0% 0%;
+                }
+
                 span {
+                    margin-left: 1rem;
                     font-size: 30px;
                     border-bottom: solid 2px blue;
                     color: blue;
