--- a/src/app/admin/creertache/creertache.component.html
+++ b/src/app/admin/creertache/creertache.component.html
@@ -25,7 +25,7 @@
                 <input type="file" accept=".mp3" class="form-control" (change)="onSelectFileAudio($event)">
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Ajouter</button>
+                <button [disabled]="formOperation.invalid" type="submit" class="btn btn-primary">Ajouter</button>
             </div>
         </form>
     
