--- a/src/app/admin/utilisateur/utilisateur.component.html
+++ b/src/app/admin/utilisateur/utilisateur.component.html
@@ -19,10 +19,10 @@
                     <td>{{item.nom}}</td>
                     <td>{{item.email}}</td>
                     <td>
-                        <button class="btn btn-sm" *ngIf="item.status==0" style="color: aquamarine;" title="Desactiver"
+                        <button class="btn btn-sm" *ngIf="item.status==0" style="color: aquamarine;" title="activer"
                             (click)="desactiverCompter(item.id)" ><i
                                 class="bi bi-toggle-off"></i></button>
-                        <button class="btn btn-sm" style="color: aquamarine;" *ngIf="item.status==1" (click)="desactiverCompter(item.id)" title="Activer"
+                        <button class="btn btn-sm" style="color: aquamarine;" *ngIf="item.status==1" (click)="desactiverCompter(item.id)" title="Desactiver"
                             ><i class="bi bi-toggle-on"></i></button>
                     </td>
                 </tr>
