--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -27,13 +27,14 @@
 
             .header_form {
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
                 align-items: center;
 
                 img {
-                    width: 40px;
-                    height: 40px;
-                    border-radius: 50% 50% 0% 0%;
+                    width: 120px;
+                    height: 90px;
+                    border-radius: 90% 90% 0% 0%;
                 }
 
                 span {
